Fix color contrast in nursing color contrast

--- a/styles/output/nursing-external-pdf.css
+++ b/styles/output/nursing-external-pdf.css
@@ -936,7 +936,7 @@ div[data-type=composite-page].os-eob {
 }
 
 .blue-text {
-  color: #0074BC;
+  color: #0071B8;
 }
 
 .os-chapter-outline {
@@ -1949,7 +1949,7 @@ a[role=doc-noteref] {
 .os-table:not(.os-unstyled-container):not(.os-no-cellborder-container):after {
   content: '';
   width: 100%;
-  border-top-color: #0074BC;
+  border-top-color: #0071B8;
   border-top-width: 0.12rem;
   border-top-style: solid;
   display: block;
@@ -2029,6 +2029,10 @@ a[role=doc-noteref] {
   background-color: #EFF3FA;
 }
 
+.alternate-shading > tbody a {
+  color: #026591;
+}
+
 .os-table.os-no-cellborder-container {
   margin-bottom: 0.7rem;
   display: table;
@@ -2046,14 +2050,14 @@ a[role=doc-noteref] {
 .os-table.os-no-cellborder-container .os-caption-container > .os-title-label {
   font-family: Mulish, sans-serif;
   font-weight: bold;
-  color: #0074BC;
+  color: #0071B8;
   text-transform: uppercase;
 }
 
 .os-table.os-no-cellborder-container .os-caption-container > .os-number {
   font-family: Mulish, sans-serif;
   font-weight: bold;
-  color: #0074BC;
+  color: #0071B8;
 }
 
 .os-table.os-no-cellborder-container .os-caption-container > .os-title {
@@ -2163,7 +2167,7 @@ a[role=doc-noteref] {
 .os-table.os-no-cellborder-container:after {
   content: '';
   width: 100%;
-  border-top-color: #0074BC;
+  border-top-color: #0071B8;
   border-top-width: 0.12rem;
   border-top-style: solid;
   display: block;
@@ -3401,7 +3405,7 @@ a[role=doc-noteref] {
 }
 
 .os-table.os-top-titled-container > .os-table-title {
-  color: #0074BC;
+  color: #0071B8;
   padding: 0.7rem 0.7rem;
   text-align: center;
 }
