--- a/styles/output/pl-nursing-pdf.css
+++ b/styles/output/pl-nursing-pdf.css
@@ -937,7 +937,7 @@ div[data-type=composite-page].os-eob {
 }
 
 .blue-text {
-  color: #0074BC;
+  color: #0071B8;
 }
 
 aside[role=doc-footnote] {
@@ -1731,7 +1731,7 @@ h4.os-subtitle + .os-figure:not(.has-splash) > figure {
 .os-table:not(.os-unstyled-container):not(.os-no-cellborder-container):after {
   content: '';
   width: 100%;
-  border-top-color: #0074BC;
+  border-top-color: #0071B8;
   border-top-width: 0.12rem;
   border-top-style: solid;
   display: block;
@@ -1811,6 +1811,10 @@ h4.os-subtitle + .os-figure:not(.has-splash) > figure {
   background-color: #EFF3FA;
 }
 
+.alternate-shading > tbody a {
+  color: #026591;
+}
+
 .os-table.os-no-cellborder-container {
   margin-bottom: 0.7rem;
   display: table;
@@ -1828,14 +1832,14 @@ h4.os-subtitle + .os-figure:not(.has-splash) > figure {
 .os-table.os-no-cellborder-container .os-caption-container > .os-title-label {
   font-family: Mulish, sans-serif;
   font-weight: bold;
-  color: #0074BC;
+  color: #0071B8;
   text-transform: uppercase;
 }
 
 .os-table.os-no-cellborder-container .os-caption-container > .os-number {
   font-family: Mulish, sans-serif;
   font-weight: bold;
-  color: #0074BC;
+  color: #0071B8;
 }
 
 .os-table.os-no-cellborder-container .os-caption-container > .os-title {
@@ -1945,7 +1949,7 @@ h4.os-subtitle + .os-figure:not(.has-splash) > figure {
 .os-table.os-no-cellborder-container:after {
   content: '';
   width: 100%;
-  border-top-color: #0074BC;
+  border-top-color: #0071B8;
   border-top-width: 0.12rem;
   border-top-style: solid;
   display: block;
